--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
           background-repeat: repeat;        }
         </style>
         </head>
-    <h1 style="font-family:arial">Hey</h1>
+<marquee width="60%" direction="right" height="100px">
+1.6.21 Thursnews - Website now up. Contains fancy background.
+</marquee>
 </html>
